使用异步调用的方式来实现用户调用接口次数加一
用户调用接口成功后, 通过 CompletableFuture.runAsync 方法来异步的对 user_interface 表进行修改